---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_CONFIG_GLOBAL: ""
---
success: true
exit_code: 0
----- stdout -----
wt-remove - Remove worktree and branch
Usage: wt remove [OPTIONS] [WORKTREES]...

Options:
  -C <path>
      Change working directory

  --no-delete-branch           
      Keep branch after removal

  -D, --force-delete
      Delete unmerged branches

  -v, --verbose
      Show commands and debug info

  --no-background              
      Run removal in foreground

  -h, --help
      Print help (see a summary with '-h')

[38;5;10mOPERATION[39m

Remove Current Worktree (no arguments):
- Requires clean working tree (no uncommitted changes)
- If in worktree: removes it and switches to main worktree
- If in main worktree: switches to default branch (e.g., main)
- If already on default branch in main: does nothing

Remove Specific Worktree (by name):
- Requires target worktree has clean working tree
- Removes specified worktree(s) and associated branches
- If removing current worktree, switches to main first
- Can remove multiple worktrees in one command

Remove Multiple Worktrees:
- When removing multiple, current worktree is removed last
- Prevents deleting directory you're currently in
- Each worktree must have clean working tree

Removal Process (by default):
1. Validates worktree has no uncommitted changes
2. Changes directory (if removing current worktree)
3. Spawns background removal process (non-blocking)
   - Directory deletion happens in background
   - Git worktree metadata removed in background
   - Branch deletion in background (uses git branch -d, safe delete)
   - Logs: .git/wt-logs/{branch}-remove.log
4. Returns immediately so you can continue working
   - Use --no-background for foreground removal (blocking)

[38;5;10mEXAMPLES[39m

Remove current worktree and branch:
wt remove

Remove specific worktree and branch:
wt remove feature-branch

Remove worktree but keep branch:
wt remove --no-delete-branch feature-branch

Remove multiple worktrees:
wt remove old-feature another-branch

Remove in foreground (blocking):
wt remove --no-background feature-branch

Switch to default in main:
wt remove  # (when already in main worktree)

----- stderr -----
